# zed-extension-bicep

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GitVersion.yml  README.md  extension.toml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: Release.yaml  ci.yaml  publish.yml  release.yaml
docs/: SEMANTIC_RELEASE.md
fixtures/grammar/bicep/: language-features.bicep
fixtures/grammar/bicep_params/: extends-and-spread.bicepparam  using-none.bicepparam
languages/bicep/: README.md  config.toml  folds.scm  highlights.scm  indents.scm  injections.scm  outline.scm
languages/bicep_params/: brackets.scm  config.toml  folds.scm  highlights.scm  indents.scm  outline.scm
languages/bicepparam/: README.md  config.toml  highlights.scm  locals.scm
scripts/: test-grammar-fixtures.js  test-version-update.js
src/: bicep-lsp-bridge.py  bicep.rs
